# PL-interpreter

./: Cargo.toml
src/: bin.rs  lib.rs
src/builtin/: array.rs  cast_value.rs  convert.rs  math.rs  mod.rs  number.rs  print.rs  string.rs  stringify.rs  time.rs  type_of.rs
src/environment/: mod.rs
src/macros/: mod.rs
src/runtime/: error.rs  interpreter.rs
src/values/: array.rs  bool.rs  class.rs  class_instance.rs  decimal.rs  function.rs  integer.rs  mod.rs  native_fn.rs  null.rs  object.rs  string.rs
test/: classes.amr  loop.amr  loop.pl  main.amr  main.pl
