[package]
name = "pl_interpreter"
version = "0.1.0"
edition = "2021"

[lib]
name = "pl_interpreter"
path = "src/lib.rs"

[[bin]]
name = "pl_interpreter_bin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pl_ast = { path = "../PL" }
dyn-clone = "1.0.16"
lazy_static = "1.4.0"
rand = "0.8.5"
